fix(core): fix sticky behavior for tui-scrollbar content
add height intrinsic sizing to scrollbar content to match real content size

--- a/projects/core/components/scrollbar/scrollbar.style.less
+++ b/projects/core/components/scrollbar/scrollbar.style.less
@@ -34,4 +34,5 @@
     flex: 1;
     flex-basis: auto;
     width: 100%;
+    height: max-content;
 }
